--- a/hunger_less/hunger_less/static/css/project.css
+++ b/hunger_less/hunger_less/static/css/project.css
@@ -11,3 +11,9 @@
   background-color: #f2dede;
   border-color: #eed3d7;
 }
+
+@media (min-width: 1200px){
+  .container {
+    max-width: 100% ;
+}
+}
