--- a/hunger_less/hunger_less/templates/posts/post_form.html
+++ b/hunger_less/hunger_less/templates/posts/post_form.html
@@ -1,5 +1,9 @@
+{% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
+{% block content %}
 <form action="" method="post">{% csrf_token %}
     {{ form|crispy }}
     <input type="submit" value="Save" />
 </form>
+{% endblock content %}
