--- a/hunger_less/hunger_less/templates/posts/viewposts.html
+++ b/hunger_less/hunger_less/templates/posts/viewposts.html
@@ -1,9 +1,14 @@
+{% extends "base.html" %}
+{% load static %}
 {% load django_tables2 %} {% load i18n %}
-
 {% block content %}
 <div class="sidebar">
   <nav class="sidebar-nav">
     <ul class="nav">
+            <form action="" method="get">
+                    {{ filter.form.as_p }}
+                    <input type="submit" />
+                </form>
       <li class="nav-item">
         <a class="nav-link" href="index.html"><i class="icon-speedometer"></i> Filter By</a>
       </li>
@@ -49,48 +54,84 @@
 
       <!-- Breadcrumb Menu-->
     </ol>
-
+    
     <div class="container-fluid">
+            
+
         <div class="animated fadeIn">
             <div class="card-deck">
-                <div class="card ">
-                    <div class="card-header">
-                        Company Name <large class="float-sm-right">Pick up By: Date</large>
+                    {% for row in table.page.object_list|default:table.rows %} {# support pagination #}
+                    {% block table.tbody.row %}
+                    <div class="card ">
+                    <tr {{ row.attrs.as_html }}>
+                        {% for column, cell in row.items %}
+                            <td {{ column.attrs.td.as_html }}>{% if column.localize == None %}{{ cell }}{% else %}{% if column.localize %}{{ cell|localize }}{% else %}
+                                {{ cell|unlocalize }}{% endif %}{% endif %}</td>
+                        {% endfor %}
+                    </tr>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Location:</li>
-                        <li class="list-group-item">Food Type <large class="float-sm-right">Quantity</large></li>
-                        <li class="list-group-item">Description</li>
-                    </ul>
-                <div class="card-footer text-muted">
-                        <small class="float-sm-right">post date</small>
-                </div>
-                </div>
-                <!--End Card-->
-                <div class="card ">
-                        <div class="card-header">
-                            Company Name <large class="float-sm-right">Pick up By: Date</large>
+                    {% endblock table.tbody.row %}
+                    {% empty %}
+                    {% if table.empty_text %}
+                    {% block table.tbody.empty_text %}
+                    <div class="card ">
+                            <div class="card-header">
+                                Company Name <large class="float-sm-right">Pick up By: Date</large>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Location:</li>
+                                <li class="list-group-item">Food Type <large class="float-sm-right">Quantity</large></li>
+                                <li class="list-group-item">Description</li>
+                            </ul>
+                        <div class="card-footer text-muted">
+                                <small class="float-sm-right">post date</small>
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Location:</li>
-                            <li class="list-group-item">Food Type <large class="float-sm-right">Quantity</large></li>
-                            <li class="list-group-item">Description</li>
-                        </ul>
-                    <div class="card-footer text-muted">
-                            <small class="float-sm-right">post date</small>
-                    </div>
-                    </div>
-                    <!--End Card-->
+                        </div>
+                    {% endblock table.tbody.empty_text %}
+                    {% endif %}
+                    {% endfor %}
                         
                 </div>
 
         </div>
-
+            {% if table.page %}
+            {% with table.page.paginator.count as total %}
+            {% with table.page.object_list|length as count %}
+            {% block pagination %}
+            <ul class="pagination">
+                {% if table.page.has_previous %}
+                    {% block pagination.previous %}
+                        <li class="previous">
+                            <a href="{% querystring table.prefixed_page_field=table.page.previous_page_number %}">{% trans "Previous" %}</a>
+                        </li>
+                    {% endblock pagination.previous %}
+                {% endif %}
+            
+                {% if table.page.has_previous or table.page.has_next %}
+                    {% block pagination.cardinality %}
+                        <li class="cardinality">
+                            {% blocktrans with table.page.number as current and table.paginator.num_pages as total %}Page {{ current }} of {{ total }}{% endblocktrans %}
+                        </li>
+                    {% endblock pagination.cardinality %}
+                {% endif %}
+            
+                {% if table.page.has_next %}
+                    {% block pagination.next %}
+                        <li class="next">
+                            <a href="{% querystring table.prefixed_page_field=table.page.next_page_number %}">{% trans "Next" %}</a>
+                        </li>
+                    {% endblock pagination.next %}
+                {% endif %}
+            </ul>
+            {% endblock pagination %}
+            {% endwith %}
+            {% endwith %}
+            {% endif %}
     </div>
 
     <!-- FLoating Button-->
     <br>
-    <div class="container-fluid"><a class="btn-floating btn-lg btn-success pull-right" href="addpost.html">Add Post</a></div>
+    <div class="container-fluid"><a class="btn-floating btn-lg btn-success pull-right" href="{% url 'post:post-add' %}">Add Post</a></div>
     
 
 {% endblock content %}
