--- a/hunger_less/hunger_less/templates/posts/post_form.html
+++ b/hunger_less/hunger_less/templates/posts/post_form.html
@@ -2,8 +2,22 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<form action="" method="post">{% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Save" />
-</form>
+<div class="container-fluid mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-10">
+            <div class="card">
+                <div class="card-header">
+                    Add a Post
+                </div>
+                <div class="card block">
+                    <form class="mx-auto" style="width: 900px;" action="" method="post">{% csrf_token %}
+                        {{ form|crispy }}
+                        <input class="btn btn-lg btn-success pull-right" type="submit" value="Save" />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
