--- a/hunger_less/hunger_less/templates/base.html
+++ b/hunger_less/hunger_less/templates/base.html
@@ -94,6 +94,20 @@
         <li class="nav-item px-3">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
+        {% if request.user.is_authenticated %}
+          {% if request.user.is_staff %}
+          <li class="nav-item px-3">
+            <a class="nav-link" href="{% url 'post:posts' %}">All Posts</a>
+          </li>
+          <li class="nav-item px-3">
+              <a class="nav-link" href="{% url 'post:myposts' %}">My Posts</a>
+            </li>
+          {% else %}
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'post:posts' %}">All Posts</a>
+          </li>
+          {% endif %}
+        {% endif %}
       </ul>
       <ul class="nav navbar-nav ml-auto">
           {% if request.user.is_authenticated %}
