--- a/hunger_less/hunger_less/templates/base.html
+++ b/hunger_less/hunger_less/templates/base.html
@@ -18,7 +18,7 @@
    <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css" />
   <!-- Styles required by this views -->
 
     <!-- Your stuff: Third-party CSS libraries go here -->
@@ -74,7 +74,7 @@
             <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %} <i class="fa fa-user"></i></a>
           </li>
         </li>
-        <li class="nav-item d-md-down-none">
+        <li class="nav-item d-md-down-none" style="margin-left:12px !important;margin-right:10px !important;">
           {# URL provided by django-allauth/account/urls.py #}
           <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
         </li>
@@ -119,7 +119,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
       <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
       <script src="https://raw.githubusercontent.com/HubSpot/pace/v0.5.3/pace.min.js"></script>
-      
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
 
        <!-- CoreUI main scripts -->
   <script src="{% static 'js/app.js' %}"></script>
