--- a/hunger_less/hunger_less/templates/pages/about.html
+++ b/hunger_less/hunger_less/templates/pages/about.html
@@ -1,1 +1,19 @@
 {% extends "template.html" %}
+{% block content %}
+<div id="fh5co-feature-product" class="fh5co-section-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center heading-section">
+                <h3>What we do.</h3>
+                <p>We are a non-profit oranization that connects people/ oranizations who have extra food items to donate with 
+                    charities that distribute food.<br>
+                    Persons who is willing to donate food items such as grocers who have surpluss goods about to expire or just 
+                    an indiviual who wants to do some good can post on our forum for charities to view. <br>
+                </p>
+            </div>
+        </div>
+
+        
+    </div>
+</div>
+{% endblock content %}
