--- a/hunger_less/hunger_less/templates/posts/viewposts.html
+++ b/hunger_less/hunger_less/templates/posts/viewposts.html
@@ -4,7 +4,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="sidebar">
+<div class="sidebar" style="background-color:#005bb7 ;">
   <nav class="sidebar-nav">
     <ul class="nav">
             <li class="nav-title">
