--- a/hunger_less/hunger_less/static/css/project.css
+++ b/hunger_less/hunger_less/static/css/project.css
@@ -12,7 +12,6 @@
   border-color: #eed3d7;
 }
 
-<<<<<<< HEAD
 .header-top {
   background: #0080ff !important;
 }
@@ -46,10 +45,8 @@ a:hover {
 
 #footer {
   background:  #0080ff !important;
-=======
-@media (min-width: 1200px){
-  .container {
-    max-width: 100% ;
 }
->>>>>>> 3a082757533f94f0040d3b3e75050404251d3304
+
+.app-header.navbar .navbar-brand {
+  width: 270px;
 }
