--- a/hunger_less/hunger_less/templates/account/logout.html
+++ b/hunger_less/hunger_less/templates/account/logout.html
@@ -4,19 +4,32 @@
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
-{% block inner %}
-<h1>{% trans "Sign Out" %}</h1>
+{% block content %}
+<div class="container-fluid">
+  <br>
+  <br>
+  <div class="row justify-content-center">
+      <div class="col col-md-10">
+    <div class="card">
+        
+        <div class="card-header">
+            <h1>{% trans "Sign Out" %}</h1>
+          </div>
+          <div class="card-block">
+        <p>{% trans 'Are you sure you want to sign out?' %}</p>
+        <form method="post" action="{% url 'account_logout' %}">
+          {% csrf_token %}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+          {% endif %}
+          <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+        </div>
+    </div>
+    </div>
+  </div>
+</div>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button class="btn btn-danger" type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
-
-{% endblock %}
+{% endblock content%}
 
