--- a/hunger_less/hunger_less/templates/account/signup.html
+++ b/hunger_less/hunger_less/templates/account/signup.html
@@ -5,19 +5,34 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block inner %}
-<h1>{% trans "Sign Up" %}</h1>
+{% block content %}
+<div class="container-fluid">
+  <br>
+  <br>
+  <div class="row justify-content-center">
+      <div class="col col-md-10">
+    <div class="card">
+        
+        <div class="card-header">
+            <h1>{% trans "Sign Up" %}</h1>
+          </div>
+          <div class="card-block">
+        <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            {% csrf_token %}
+            {{ form|crispy }}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            {% endif %}
+            <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
+          </form>
+        </div>
+    </div>
+    </div>
+  </div>
+</div>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button class="btn btn-primary" type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+{% endblock content%}
 
-{% endblock %}
 
