--- a/hunger_less/hunger_less/templates/base.html
+++ b/hunger_less/hunger_less/templates/base.html
@@ -53,7 +53,7 @@
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item px-3">
-            <a class="nav-link" href="{% url 'contact' %}">Conatact</a>
+            <a class="nav-link" href="{% url 'contact' %}">Contact</a>
           </li>
         {% if request.user.is_authenticated %}
           {% if request.user.is_staff %}
