--- a/hunger_less/hunger_less/templates/base.html
+++ b/hunger_less/hunger_less/templates/base.html
@@ -40,7 +40,10 @@
       <!-- <button class="navbar-toggler mobile-sidebar-toggler d-lg-none mr-auto" type="button">
         <span class="navbar-toggler-icon"></span>
       </button> -->
-      <a class="navbar-brand brand-text" href="#"><font color= "#0080ff">Hunger Less </font> </a>
+      <a class="navbar-brand brand-text" href="#"><font color= "#0080ff" style="
+        text-align: center;
+        font-size: 22px;
+        font-weight: 600;">Hunger Less </font> </a>
       <!-- <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button">
         <span class="navbar-toggler-icon"></span>
       </button> -->
