--- a/hunger_less/hunger_less/templates/posts/viewposts.html
+++ b/hunger_less/hunger_less/templates/posts/viewposts.html
@@ -16,7 +16,7 @@
                 </form>
     </ul>
   </nav>
-  <button class="sidebar-minimizer brand-minimizer" type="button"></button>
+  <!-- <button class="sidebar-minimizer brand-minimizer" type="button"></button> -->
 </div>
 
 
