--- a/hunger_less/hunger_less/templates/template.html
+++ b/hunger_less/hunger_less/templates/template.html
@@ -109,12 +109,19 @@
 							<li><a class="nav-link" href="{% url 'about' %}">About</a></li>
 							<li><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
 							{% if request.user.is_authenticated %}
-							{% if request.user.is_staff %}
-							<li class="nav-item px-3">
-								<a class="nav-link" href="{% url 'post:posts' %}">Posts</a>
-							  </li>
-							  {% endif %}
-							  {% endif %}
+								{% if request.user.is_staff %}
+								<li class="nav-item px-3">
+									<a class="nav-link" href="{% url 'post:posts' %}">All Posts</a>
+								</li>
+								<li class="nav-item px-3">
+									<a class="nav-link" href="{% url 'post:myposts' %}">My Posts</a>
+									</li>
+								{% else %}
+								<li class="nav-item">
+									<a class="nav-link" href="{% url 'post:posts' %}">All Posts</a>
+								</li>
+								{% endif %}
+								{% endif %}
 							  {% if request.user.is_authenticated %}
 							  <li>{# URL provided by django-allauth/account/urls.py #}
 								<a class="nav-link" href="{% url 'users:detail' request.user.username  %}">{% trans "My Profile" %} <i class="fa fa-user"></i></a>
